--- a/versions.gradle
+++ b/versions.gradle
@@ -48,6 +48,7 @@ versions.hamcrest = "1.3"
 versions.junit = "4.12"
 versions.kotlin = "1.3.61"
 versions.lifecycle = "2.2.0"
+versions.maps_utils = "1.3.1"
 versions.material = "1.1.0"
 versions.mockito = "2.25.0"
 versions.mockito_all = "1.10.19"
@@ -57,6 +58,10 @@ versions.multidex = "2.0.1"
 versions.navigation = "2.2.0"
 versions.okhttp_logging_interceptor = "3.9.0"
 versions.paging = "2.1.0"
+versions.play_services_location = "17.0.0"
+versions.play_services_maps = "17.0.0"
+versions.play_core = "1.7.3"
+versions.maps_ktx = "1.5.0"
 versions.recyclerview = "1.0.0"
 versions.retrofit = "2.9.0"
 versions.retrofit_coroutines_adapter = "0.9.2"
@@ -169,6 +174,7 @@ lifecycle.livedata_ktx = "androidx.lifecycle:lifecycle-livedata-ktx:$versions.li
 deps.lifecycle = lifecycle
 
 deps.material = "com.google.android.material:material:$versions.material"
+deps.maps_utils = "com.google.maps.android:android-maps-utils:$versions.maps_utils"
 
 def mockito = [:]
 mockito.core = "org.mockito:mockito-core:$versions.mockito"
@@ -187,6 +193,11 @@ navigation.ui = "androidx.navigation:navigation-ui:$versions.navigation"
 navigation.ui_ktx = "androidx.navigation:navigation-ui-ktx:$versions.navigation"
 navigation.safe_args_plugin = "androidx.navigation:navigation-safe-args-gradle-plugin:$versions.navigation"
 deps.navigation = navigation
+
+deps.play_services_location = "com.google.android.gms:play-services-location:$versions.play_services_location"
+deps.play_core = "com.google.android.play:core:$versions.play_core"
+deps.play_services_maps = "com.google.android.gms:play-services-maps:$versions.play_services_maps"
+deps.maps_ktx = "com.google.maps.android:maps-ktx:$versions.maps_ktx"
 
 deps.okhttp_logging_interceptor = "com.squareup.okhttp3:logging-interceptor:${versions.okhttp_logging_interceptor}"
 deps.paging_ktx = "androidx.paging:paging-runtime-ktx:$versions.paging"
